feat(#30): crud 구현 완료