@@ -1,8 +1,10 @@
 package com.neo.neomarket.service.impl;
 
-import com.neo.neomarket.dto.AuctionPostCreateDTO;
-import com.neo.neomarket.dto.AuctionPostDTO;
-import com.neo.neomarket.dto.BidLogDTO;
+import com.neo.neomarket.dto.*;
+import com.neo.neomarket.dto.request.AuctionPostCreateDTO;
+import com.neo.neomarket.dto.request.AuctionPostUpdateDTO;
+import com.neo.neomarket.dto.response.AuctionPostDTO;
+import com.neo.neomarket.dto.response.AuctionPostReadDTO;
 import com.neo.neomarket.entity.mysql.AuctionPostEntity;
 import com.neo.neomarket.entity.mysql.PictureEntity;
 import com.neo.neomarket.entity.mysql.UserEntity;
@@ -11,27 +13,31 @@ import com.neo.neomarket.exception.ErrorCode;
 import com.neo.neomarket.repository.mysql.AuctionPostRepository;
 import com.neo.neomarket.repository.mysql.UserRepository;
 import com.neo.neomarket.service.AuctionService;
+import lombok.Getter;
 import lombok.RequiredArgsConstructor;
+import lombok.Setter;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.stereotype.Service;
 
-import java.util.ArrayList;
 import java.util.List;
 import java.util.stream.Collectors;
 
 @RequiredArgsConstructor
 @Service
+@Setter
+@Getter
 public class AuctionServiceImpl implements AuctionService {
     private final AuctionPostRepository auctionPostRepository;
     private final UserRepository userRepository;
 
     @Override
-    public void recordBidLog(BidLogDTO bidLogDTO){
+    public void recordBidLog(BidLogDTO bidLogDTO) {
         Logger logger = LoggerFactory.getLogger("AuctionServiceLogger");
         logger.info("{}", bidLogDTO);
     }
 
+    // 게시글 리스트 조회
     @Override
     public List<AuctionPostDTO> getAuctionPosts() {
         List<AuctionPostEntity> auctionPostEntities = auctionPostRepository.findAll();
@@ -41,19 +47,25 @@ public class AuctionServiceImpl implements AuctionService {
 
         return auctionPostEntities.stream()
                 .map(entity -> AuctionPostDTO.builder()
-
+                        .id(entity.getId()) // id 필드 추가
                         .title(entity.getTitle())
-                        //.pictureUrl(entity.getPictures().isEmpty() ? null : entity.getPictures().get(0).getUrl()) // 첫 번째 이미지 URL 추가
+                        // .pictureUrl(entity.getPictures().isEmpty() ? null : entity.getPictures().get(0).getUrl()) // 첫 번째 이미지 URL 추가
                         .build())
-                .toList();
+                .collect(Collectors.toList());
     }
 
+    // 게시글 상세보기
     @Override
-    public AuctionPostDTO getAuctionPostById(Long id) {
-       AuctionPostEntity auctionPostEntity = auctionPostRepository.findById(id)
-               .orElseThrow(() -> new RuntimeException("게시글을 찾을 수 없습니다"));
+    public AuctionPostReadDTO getAuctionPostById(Long id) {
+        AuctionPostEntity auctionPostEntity = auctionPostRepository.findById(id)
+                .orElseThrow(() -> new RuntimeException("게시글을 찾을 수 없습니다"));
 
-        return AuctionPostDTO.builder()
+        UserEntity user = userRepository.findById(auctionPostEntity.getUser().getId())
+                .orElseThrow(() -> new CustomException(ErrorCode.NOT_EXIST_USER));
+        String nickname = user.getNickname();
+
+        return AuctionPostReadDTO.builder()
+                .id(auctionPostEntity.getId()) // id 필드 추가
                 .title(auctionPostEntity.getTitle())
                 .content(auctionPostEntity.getContent())
                 .startPrice(auctionPostEntity.getStartPrice())
@@ -63,13 +75,16 @@ public class AuctionServiceImpl implements AuctionService {
                 .pictureUrls(auctionPostEntity.getPictures().stream()
                         .map(PictureEntity::getUrl)
                         .collect(Collectors.toList())) // 모든 사진 URL 리스트 추가
+                .nickname(nickname)
                 .build();
     }
 
-    //create
+    // 게시글 생성
     @Override
     public AuctionPostCreateDTO createAuctionPost(AuctionPostCreateDTO auctionPostCreateDTO) {
-        UserEntity user = userRepository.findById(auctionPostCreateDTO.getUserId()).orElseThrow(() -> new CustomException(ErrorCode.NOT_EXIST_USER));
+        UserEntity user = userRepository.findById(auctionPostCreateDTO.getUserId())
+                .orElseThrow(() -> new CustomException(ErrorCode.NOT_EXIST_USER));
+
         AuctionPostEntity auctionPostEntity = AuctionPostEntity.builder()
                 .title(auctionPostCreateDTO.getTitle())
                 .content(auctionPostCreateDTO.getContent())
@@ -78,10 +93,7 @@ public class AuctionServiceImpl implements AuctionService {
                 .deadline(auctionPostCreateDTO.getDeadline())
                 .category(auctionPostCreateDTO.getCategory())
                 .user(user)
-                //.status("ACTIVE") // 초기값 설정해보기
-                .pictures(new ArrayList<>()) // 초기화
                 .build();
-
 
         // PictureEntity 리스트 생성
         if (auctionPostCreateDTO.getPictureUrls() != null) {
@@ -95,72 +107,52 @@ public class AuctionServiceImpl implements AuctionService {
         }
 
         // 게시글 저장
-        auctionPostRepository.save(auctionPostEntity);
+        AuctionPostEntity savedEntity = auctionPostRepository.save(auctionPostEntity);
 
-
+        // DTO로 변환하여 반환
         return AuctionPostCreateDTO.builder()
-                .title(auctionPostEntity.getTitle())
-                .content(auctionPostEntity.getContent())
-                .startPrice(auctionPostEntity.getStartPrice())
-                .currentPrice(auctionPostEntity.getCurrentPrice())
-                .deadline(auctionPostEntity.getDeadline())
-                .category(auctionPostEntity.getCategory())
-                .pictureUrls(auctionPostEntity.getPictures().stream()
+                .title(savedEntity.getTitle())
+                .content(savedEntity.getContent())
+                .startPrice(savedEntity.getStartPrice())
+                .currentPrice(savedEntity.getCurrentPrice())
+                .deadline(savedEntity.getDeadline())
+                .category(savedEntity.getCategory())
+                .pictureUrls(savedEntity.getPictures().stream()
                         .map(PictureEntity::getUrl) // URL 리스트로 변환
                         .collect(Collectors.toList()))
                 .userId(user.getId())
                 .build();
     }
 
-
-
-
-
+    // 게시글 업데이트
     @Override
-    public AuctionPostDTO updateAuctionPost(Long id , AuctionPostDTO auctionPostDTO){
+    public AuctionPostUpdateDTO updateAuctionPost(Long id, AuctionPostUpdateDTO auctionPostUpdateDTO) {
         AuctionPostEntity auctionPostEntity = auctionPostRepository.findById(id)
                 .orElseThrow(() -> new RuntimeException("게시글을 찾을 수 없습니다."));
 
         // DTO의 값으로 엔티티 업데이트
-        auctionPostEntity.setTitle(auctionPostDTO.getTitle());
-        auctionPostEntity.setContent(auctionPostDTO.getContent());
-        auctionPostEntity.setCurrentPrice(auctionPostDTO.getCurrentPrice());
-        auctionPostEntity.setDeadline(auctionPostDTO.getDeadline());
-        auctionPostEntity.setCategory(auctionPostDTO.getCategory());
-
-        // 이미지 URL 업데이트
-//        auctionPostEntity.getPictures().clear();
-//        for (String url : auctionPostDTO.getPictureUrls()) {
-//            PictureEntity picture = PictureEntity.builder()
-//                    .url(url)
-//                    .auctionPost(auctionPostEntity)
-//                    .build();
-//            auctionPostEntity.getPictures().add(picture);
-//        }
+        auctionPostEntity.setTitle(auctionPostUpdateDTO.getTitle());
+        auctionPostEntity.setContent(auctionPostUpdateDTO.getContent());
+        auctionPostEntity.setDeadline(auctionPostUpdateDTO.getDeadline());
+        auctionPostEntity.setCategory(auctionPostUpdateDTO.getCategory());
 
         AuctionPostEntity updatedEntity = auctionPostRepository.save(auctionPostEntity);
 
         // DTO로 변환하여 반환
-        return AuctionPostDTO.builder()
+        return AuctionPostUpdateDTO.builder()
                 .title(updatedEntity.getTitle())
                 .content(updatedEntity.getContent())
-                .currentPrice(updatedEntity.getCurrentPrice())
                 .deadline(updatedEntity.getDeadline())
                 .category(updatedEntity.getCategory())
-//                .pictureUrls(updatedEntity.getPictures().stream()
-//                        .map(PictureEntity::getUrl)
-//                        .collect(Collectors.toList()))
-
                 .build();
     }
 
+    // 게시글 삭제
     @Override
-    public void deleteAuctionPost(Long id){
-        if(!auctionPostRepository.existsById(id)){
+    public void deleteAuctionPost(Long id) {
+        if (!auctionPostRepository.existsById(id)) {
             throw new RuntimeException("게시물이 없습니다.");
         }
-        auctionPostRepository.deleteById(id);
+        auctionPostRepository.deleteById(id); // 엔티티 완전 삭제
     }
-
-
 }
